# home-hub-rust

./: Cargo.toml  homehub.desktop  run.sh
scripts/: run_homehub_server.sh
src/: main.rs
src/routes/: homehub.rs  homehub_router.rs  mod.rs
src/utils/: hubcontroller.rs  mod.rs
